[WCMSFEQ-235] - Removed margin left from .results-page .pagination span to fix spacing issue.

--- a/CancerGov/_src/StyleSheets/_searchresults.scss
+++ b/CancerGov/_src/StyleSheets/_searchresults.scss
@@ -40,6 +40,12 @@
 }
 .results-pager {
 	margin-bottom: em-calc(85px);
+	
+	.pagination {
+		span {
+			margin-left: 0;	
+		}
+	}
 }
 .sitewide-results {
 	ul.no-bullets > li {
